Agrego banner y configuraciones para los logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+#APPARKME
+application.title=APPARKME by MACONS
+application.version=0.0.1-SNAPSHOT
+
+#Logging config
+logging.level.root=info
+logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) %logger.%M - %msg%n
+logging.file.name=/aplicaciones/apparkme/logs/apparkme.log
+
