--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,9 @@ application.version=0.0.1-SNAPSHOT
 logging.level.root=info
 logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) %logger.%M - %msg%n
 logging.file.name=/aplicaciones/apparkme/logs/apparkme.log
+jwt.token.secret=icmBCcps2NKkAIr-R45gipao57r9pblgbJllEgiExa2ON7sR
+#Prefix all paths
+#server.servlet.context-path=/api/apparkme/
 
+
+#Temporal configs
