Agrego nuevo endpoint de creacion de usuario contra db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,14 @@ jwt.token.secret=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjVjOWYzYWI2NzY2Mj
 #server.servlet.context-path=/api/apparkme/
 
 #Temporal configs
+
+#Database configs
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:h2:file:/data/demo
+spring.jpa.defer-datasource-initialization=true
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create
